# Titere

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
encrypt_project/: .gitignore  Cargo.toml
encrypt_project/src/: main.rs
src/: main.rs
