[package]
name = "loader"
version = "0.1.0"
edition = "2021"
description = "Advanced red team tool for penetration testing and security research"
authors = ["9Insomnie"]
license = "MIT"
repository = "https://github.com/9Insomnie/TitereV1.0"
keywords = ["red-team", "penetration-testing", "security", "windows", "rust"]
categories = ["security", "system"]

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse"
] }
base64 = "0.21"
rand = "0.8" 
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] } 
sysinfo = "0.29"

[[bin]]
name = "loader"
path = "src/main.rs"
windows_subsystem = "windows" 