[package]
name = "encrypt_project"
version = "0.1.0"
edition = "2021"
description = "File encryption tool for red team operations"
authors = ["9Insomnie"]
license = "MIT"
repository = "https://github.com/9Insomnie/TitereV1.0"

[dependencies]
aes-gcm = "0.10.3"
rand = "0.8.5"
sha2 = "0.10.8"
clap = "3.2.25"
